# QSO-SEEKER

./: .gitignore  LICENSE  README.md  changelog.md  deploy.md  mkdocs.yml  punchlist.md  pyproject.toml  release.md  taskchain.md
.github/: AI_INPUT_SECURITY.md
actions/: action-chain.json
benchmarks/: agi-progress-v1.md
configs/: sources.dry-run.json  sources.live.checkpoint.json
contracts/: academic-contribution-bundle.schema.json  canonical-record-v1.md
docs/: api-and-cli.md  architecture.md  design-contracts.md  developer-guide.md  experimental-qso-spawn.md  federated-academic-reporting.md  governance.md  index.md  licensing-policy.md  obstruction-and-gluing.md  operations.md  project-overview.md  public-private-deployment.md  security-architecture.md  security.md  source-observation-envelope.md  source-review-record.md  source-rights-and-privacy-review.md
examples/: .qso-seeker.json
reports/: daily-seeker-review-20260723.json  daily-seeker-review-20260723.md  p0-security-cli-baseline-20260717.md  semiweekly-repository-pruning-20260721.md
roadmap/: data-collection-plan.json
schemas/: seeker-handoff.schema.json
scripts/: bounded_live_collection.py  dry_run_collection.py  materialize_data_collection_scaffold.py  validate_consent_lock.py  validate_daily_review.py  validate_source_review_record.py
security/: README.md  ecosystem-scan-policy.json  network-access-policy.json  notification-policy.json  opt-in.schema.json  policy.json  source-attribution.schema.json  sovereign-request-profile.json  watchlist.json
tests/: test_action_protocol.py  (+12 more)
(+39 files in other folders)
