[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qso-seeker"
version = "0.1.0"
description = "Seeker intake, genome synthesis, and bounded QSO spawning"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
qso-seeker = "qso_seeker.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
